# pymygdala

./: .gitignore  README.md  pyproject.toml
docs/: apidocs.rst  conf.py  index.rst
gamygdala/: concepts.py
src/pymygdala/: agent.py  concepts.py  engines.py
tests/: gamygdala_test.py
